cmake_minimum_required(VERSION 3.27)
project(cpp_course2324_shakhrom_aminov_2023)

set(CMAKE_CXX_STANDARD 14)

include_directories(cpp-23-24-geometry)

add_executable(cpp_course2324_shakhrom_aminov_2023
        cpp-23-24-geometry/cpp-23-24-geometry.cpp
        cpp-23-24-geometry/cpp-23-24-geometry.hpp)
